2011-05-12  Andrew Su  <asu@redhat.com>

	* AUTHORS: Updated name.

2011-05-12  Andrew Haley  <aph@redhat.com>

	Rename icedtea-hugepage-7034464.patch -> openjdk/7034464-hugepage.patch
	icedtea-hugepage-7037939.patch -> openjdk/7037939-hugepage.patch
	* patches/openjdk/7043564-hugepage.patch: Import from upstream.
	* Makefile.am: move patches, add new patch.

2011-05-12  Denis Lila <dlila@redhat.com>

	* Makefile.am: Apply patch.
	* NEWS: Update with backport.
	* patches/openjdk/pgram-pipe-regression.patch: Fix regression a
	where the wrong user space bounds would be passed to user supplied
	paint object.

2011-05-12  Omair Majid  <omajid@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Remove rmi_amd64.patch. Add
	7043921-java_rmi_cgi.patch
	* patches/openjdk/7043921-java_rmi_cgi.patch: New file.
	* patches/rmi_amd64.patch: Remove.

2011-05-12  Omair Majid  <omajid@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Replace patches/libpng.patch with
	patches/openjdk/6959123-libpng_14.patch.
	* patches/libpng.patch: Remove.
	* patches/openjdk/6959123-libpng_14.patch: New file.

2011-05-11  Omair Majid  <omajid@redhat.com>

	* Makefile.am
	(ICEDTEA_PATCHES): Move headers-hotspot.patch to ...
	(ICEDTEA_ECJ_PATCHES): New patch.
	(ICEDTEA_ENV): Moves endorsed dir varaibles to ...
	(ICEDTEA_ENV_ECJ): Here.
	* patches/headers-hotspot.patch: Move to ...
	* patches/ecj/endorsed-dir-for-jvmti.patch: New file.

2011-05-11  Omair Majid  <omajid@redhat.com>

	Backport S7042040: Remove disk space sanity check
	* Makefile.am (ICEDTEA_PATCHES): Add
	patches/openjdk/7042040-no_disk_space_check.patch. Remove
	patches/no-sync.patch.
	* patches/openjdk/7042040-no_disk_space_check.patch: New file.
	* patches/no-sync.patch: Remove. Upstream's fix is an improved version.

2011-05-11  Andrew Su  <asu@redhat.com>

	* AUTHORS: Added Denis Lila, Marathon, and Andrew Su.

2011-05-10  Omair Majid  <omajid@redhat.com>

	Move pr633-no_javaws_man_page.patch to proper location