@@ -1,28 +1,27 @@
 --- openjdk-old/hotspot/test/runtime/6929067/Test6929067.sh	2010-10-08 22:29:24.000000000 +0200
 +++ openjdk/hotspot/test/runtime/6929067/Test6929067.sh	2010-12-08 13:45:18.000000000 +0100
-@@ -7,6 +7,7 @@
- ## @run shell Test6929067.sh
- ##
- 
-+
- if [ "${TESTSRC}" = "" ]
- then TESTSRC=.
- fi
-@@ -42,7 +43,24 @@
+@@ -42,7 +42,31 @@
      ;;
  esac
  
 -LD_LIBRARY_PATH=.:${TESTJAVA}/jre/lib/i386/client:/usr/openwin/lib:/usr/dt/lib:/usr/lib:$LD_LIBRARY_PATH
 +COMP_FLAG="-m32"
 +
++# Test if JDK is 32 or 64 bits
++${TESTJAVA}/bin/java -d64
++
++if [[ $? == 0 ]]
++then
++    COMP_FLAG="-m64"
++fi
++
 +# Get ARCH specifics
 +ARCH=`uname -m`
 +case "$ARCH" in
 +  x86_64)
 +    ARCH=amd64
-+    COMP_FLAG="-m64"
 +    ;;
-+  i585)
++  i586)
 +    ARCH=i386
 +    ;;
 +  i686)
@@ -34,7 +33,7 @@
  export LD_LIBRARY_PATH
  
  THIS_DIR=`pwd`
-@@ -55,6 +73,13 @@
+@@ -55,6 +79,13 @@
  
  ${TESTJAVA}${FS}bin${FS}javac T.java
  
