@@ -1,3 +1,9 @@
+2011-05-16  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* patches/jtreg-6929067-fix.patch: fix this regression
+	test so it works on any combination of JVM and platform
+	(32 bit and 64 bit)
+
 2011-05-12  Andrew Su  <asu@redhat.com>
 
 	* AUTHORS: Updated name.
